--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,9 @@
 [submodule "foundry-f23/foundry-account-abstraction/lib/foundry-era-contracts"]
 	path = foundry-f23/foundry-account-abstraction/lib/foundry-era-contracts
 	url = https://github.com/Cyfrin/foundry-era-contracts
+[submodule "foundry-f23/foundry-dao-f23/lib/forge-std"]
+	path = foundry-f23/foundry-dao-f23/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
+[submodule "foundry-f23/foundry-dao-f23/lib/openzeppelin-contracts"]
+	path = foundry-f23/foundry-dao-f23/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
